# ProgrammingPraxis

./: ProgrammingPraxis.cabal  stack.yaml
.stack-work/install/x86_64-osx/lts-6.13/7.10.3/flag-cache/: Cabal-1.22.8.0-fa4fa305d3583e6c000ba5c24c4e2f03  ProgrammingPraxis-0.1.0.0-84453ef5bff172c8aee4a5dbf56ad4c7  StateVar-1.1.0.4-c870ecc28adfa9764b145a54f6a2c147  adjunctions-4.3-46421d3149133003f73b356d14e864f8  aeson-0.11.2.1-b481dcb950118afd004f40939030a344  attoparsec-0.13.0.2-ef40a778f72b5caa1cd18533d8d64887  base-orphans-0.5.4-43f3d27c7bf4b3afcb3d01a72ca02a01  base16-bytestring-0.1.1.6-9e6871841ba9598a920190a3965bc7f4  bifunctors-5.2-690a5048e517b352f2c9b7609595ca3f  byteable-0.1.1-bf870645be051d53f8c785389208c7cc  comonad-4.2.7.2-a5cd0aeb8d55972cbd39f7ddac06b5c7  composition-1.0.2.1-6c0e2fd660f55862309bd711514c4448  contravariant-1.4-0ce093304b18013cf25858cd71d33637  cryptohash-0.11.9-109ed5ed2cdead93e9461d1fb9748821  cryptonite-0.15-41277bb0a1e687689ac0c8be624baf6f  distributive-0.5.0.2-62adbaf9df801473b6dcca620536e21d  dlist-0.7.1.2-220d0c7d28c858a7c7c383616eebf3ec  exceptions-0.8.3-d4f6a36a62bf146f0a4221b7c358d663  fail-4.9.0.0-dd8812a5b6b0a0ce790ee5a93be03a9d  free-4.12.4-9c744da1b3afe11d083a9ff9a25d4cc5  ghc-paths-0.1.0.9-be8a0069ffc555b58433bcb3af1fb082  haddock-api-2.16.1-1e7235a07851a9a7f7f0c14bb5921932  haddock-library-1.2.1-790a7570fbf870da6701b09cd188e089  hashable-1.2.4.0-7550865fa2a6bb3193b4e312352713f7  haskeline-0.7.2.3-971a3f3d3eb8f7dccd9f970258521e50  intero-0.1.22  (+26 more)
.stack-work/intero/: intero25536Rdv-TEMP.hs  intero25536lIY-TEMP.hs
.stack-work/intero/intero25536_ck/: CatalanNumbers.hi  CommaQuibbling.hi  Main.hi
src/: .#CommaQuibbling.hs  187.hs  BitHacks.hs  BoyerMoore.hs  CommaQuibbling.hs  FindingMedian.hs  LexicographicPermutations.hs  ListIntersectionUnion.hs  LowestCommonAncestor.hs  LuhnAlgorithm.hs  MajorityElement.hs  MindCipher.hs  NumberPuzzle.hs  OrderedHashTable.hs  PandigitalNumbers.hs  SevenBridgesKonigsberg.hs  StringSubsets.hs  TwoStacksQueue.hs  TwoSubQuadraticSorts.hs  dutchflag.hs  iroot.hs  zeller.hs
test/: FindingMedianSpec.hs
(+20 files in other folders)
