name:                ProgrammingPraxis
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/ProgrammingPraxis#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , composition
                     , containers >= 0.5.6.2
                     , containers >= 0.5.6.2
                     , hashable
                     , haskell-docs
                     , lens
                     , random >= 1.1
                     , utility-ht
                     , vector >= 0.11
                     , vector-algorithms >= 0.7.0.1
                     , time

  default-language:    Haskell2010

executable ProgrammingPraxis-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       ProgrammingPraxis
                     , base
                     , containers >= 0.5.6.2
                     , containers >= 0.5.6.2
  default-language:    Haskell2010

test-suite ProgrammingPraxis-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       ProgrammingPraxis
                     , QuickCheck >= 2.8.2
                     , base
                     , containers >= 0.5.6.2
                     , containers >= 0.5.6.2
                     , hspec >= 2.2.3
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ProgrammingPraxis
